--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "glob": "7.1.2",
     "inquirer": "5.2.0",
     "inquirer-directory": "2.1.0",
-    "mkdirp": "0.5.1"
+    "mkdirp": "0.5.1",
+    "configstore": "3.1.2"
   },
   "files": [
     "dist",
