--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
   "dependencies": {
     "@v3rse/chroma": "1.1.0",
     "clear": "0.1.0",
+    "cli-progress": "1.8.0",
+    "configstore": "3.1.2",
     "figlet": "1.2.0",
     "glob": "7.1.2",
     "inquirer": "5.2.0",
     "inquirer-directory": "2.1.0",
-    "mkdirp": "0.5.1",
-    "configstore": "3.1.2"
+    "mkdirp": "0.5.1"
   },
   "files": [
     "dist",
